# minecraft-fs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml
filesystem/: Cargo.toml
filesystem/src/: fuse.rs  lib.rs  mount.rs  state.rs
filesystem/src/filesystem/: fuse.rs
filesystem/src/structure/: entry.rs  inode.rs  mod.rs  registry.rs  structure.rs
ipc/: Cargo.toml
ipc/src/: channel.rs  command.rs  lib.rs
mcfuse/: Cargo.toml
mcfuse/src/: main.rs
minecraft-fs/: Cargo.toml
minecraft-fs/src/: main.rs
plugin/: build.gradle  gradle.properties
plugin/src/main/java/ms/domwillia/mcfs/: MinecraftFsMod.kt
plugin/src/main/java/ms/domwillia/mcfs/ipc/: CommandExecutor.kt  Executor.kt  IpcChannel.kt
plugin/src/main/resources/: fabric.mod.json  mcfs.mixins.json
scripts/: common.py  demo.py  iter_entities.py
shared/: Vec3.kt  all.fbs  command.fbs  common.fbs  regen.sh  request.fbs  response.fbs
src/: main.rs  mount.rs
src/filesystem/: mod.rs
test-client/: Cargo.toml
test-client/src/: main.rs
