[package]
name = "filesystem"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ipc = { path = "../ipc" }
fuser = "0.10"
libc = "0.2"
ctrlc = "3.2"
parking_lot = "0.11"
log = "0.4"
smallvec = "1.7"
inventory = "0.2"
strum = { version = "0.23", features = ["derive"] }
derivative = "2.2"